--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
 	"devDependencies": {
-		"@types/node": "^25.0.1"
+		"@testing-library/dom": "^10.4.1",
+		"@testing-library/jest-dom": "^6.9.1",
+		"@testing-library/react": "^16.3.0",
+		"@testing-library/user-event": "^14.6.1",
+		"@types/node": "^25.0.1",
+		"@types/react": "^19.2.7",
+		"@types/react-dom": "^19.2.3",
+		"vitest": "^4.0.15"
 	}
 }
